--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ colored = "2.0.0"
 mockall = "*"
 bitvec = "1.0.1"
 wasm-timer = "0.2.5"
+tokio = { version = "1", features = ["full"] }
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1.6"
 console_log = "0.2.0"
